# Hazel

./: .gitignore  meson.build  note.md  test.cpp  test.hir
include/ir/ast/: ast.hpp
include/ir/lexer/: lexer.hpp  token.hpp
include/ir/mir/: instruction.hpp  literal.hpp  mir.hpp
include/ir/parser/: parser.hpp
include/utils/: error.hpp  graph.hpp  utils.hpp
include/vm/: opcode.hpp  value.hpp  vm.hpp
src/: hazel.cpp
src/ir/: meson.build
src/ir/ast/: ast_type_node.cpp
src/ir/ast/snap/: ast.cpp  ast_literal_node.cpp  ast_type_node.cpp
src/ir/lexer/: lexer.cpp  token.cpp  utils.cpp
src/ir/lexer/snap/: error.cpp  lexer.cpp  token.cpp
src/ir/parser/snap/: basic_type_checker.cpp  basic_typechecker.cpp  instruction_arg_type.hpp  parse_literal_expr.cpp  parse_type_expr.cpp  parser.cpp  typecheck_inst.cpp  utils.cpp
src/utils/: error.cpp  graph.cpp  meson.build
src/vm/snap/: common_func.hpp  macros.hpp  stream_macros.hpp  stream_vm_exec.cpp  vm_exec.cpp
